@@ -12,12 +12,16 @@ LIBOBJS += $(HDHR_DIR)/hdhomerun_device.o
 OBJS = scte65scan.o tunerdmx.o
 
 CFLAGS += -O2 -DHDHR -I$(HDHR_DIR)
-LDFLAGS += -lpthread
 
 ifeq ($(OS),Windows_NT)
+  LIBOBJS += $(HDHR_DIR)/hdhomerun_sock_windows.o
+  LIBOBJS += $(HDHR_DIR)/hdhomerun_os_windows.o
   BINEXT := .exe
-  LDFLAGS += -liphlpapi
+  LDFLAGS += -liphlpapi -lws2_32
 else
+  LIBOBJS += $(HDHR_DIR)/hdhomerun_sock_posix.o
+  LIBOBJS += $(HDHR_DIR)/hdhomerun_os_posix.o
+  LDFLAGS += -lpthread -lrt
   ifneq ($(findstring solaris,$(shell echo $$OSTYPE)),)
     LDFLAGS += -lns -lsocket
   endif
