@@ -1,10 +1,12 @@
 xxxx-yy-zz (0.3):
   Wedged in a FLTK GUI for WIN32 users allergic to CLI
       (Linux can use it too but is currently better off without)
-  Minor bugfix if using MythSQL and PSIP and more than 1 dtv sourceid
-  Minor bugfix if CDS = 255
+  Minor bugfixes
   Format mplexid=XXYYY where XX=sourceid and YYY=CDS (similar to chanids)
   Added frequency file output option (use this for PSIP scans)
+  Updated to libhdhomerun_20130328
+  Fixed a bug reading VC descriptors 
+  Confirmed working on MSWindows
 2009-05-20 (0.2.1):
   HDHomerun support debugged (thanks to Mark Knecht!)
   Added option to select HDHR /tuner# (tested working thanks to Brad Fuller)
